Update version_graph example

--- a/notebooks/version_graph_example.ipynb
+++ b/notebooks/version_graph_example.ipynb
@@ -2,13 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "from orpheusplus.cli import _connect_table\n",
-    "import networkx as nx\n",
-    "import matplotlib.pyplot as plt"
+    "import networkx as nx"
    ]
   },
   {
@@ -18,7 +17,7 @@
    "outputs": [],
    "source": [
     "table = _connect_table()\n",
-    "table.load_table(\"test_merge\")"
+    "table.load_table(\"new_table\")"
    ]
   },
   {
